--- a/gmall-pms/src/main/resources/bootstrap.yml
+++ b/gmall-pms/src/main/resources/bootstrap.yml
@@ -5,3 +5,6 @@ spring:
     nacos:
       config:
         server-addr: 127.0.0.1:8848
+        namespace: db9a85e6-0485-4af0-bfd0-5bea5609cf02
+        group: dev
+        file-extension: yml
