--- a/gmall-wms/src/main/resources/bootstrap.yml
+++ b/gmall-wms/src/main/resources/bootstrap.yml
@@ -5,3 +5,6 @@ spring:
     nacos:
       config:
         server-addr: 127.0.0.1:8848
+        namespace: d2ee21e0-6892-4ade-b8ff-6fd3b601f14e
+        group: dev
+        file-extension: yml
